src/test/contracts/negative/pattern_matching_anomalies/missing_cases/c_c.jsligo
type p = ["Four"] | ["Five"] | ["Six"]

type t = ["One", p] | ["Two", nat] | ["Three"]

let s = (x : t) : unit => 
  match(x) {
    when(Two(_)): unit;
    when(Three()): unit;
    when(One(c)): match(c) {  
      when(Four()): unit
    }
  }
